<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    android:weightSum="12"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/loginupperlogo" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        >


        <RelativeLayout
            android:id="@+id/loginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/login_layout"
            android:layout_marginRight="@dimen/login_layout"
            android:background="@drawable/rounder_corned_login_relativelayout">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/transparent">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/edittextborder"
                    android:hint="@string/userName"
                    android:inputType="textPersonName"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:text="mcc"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"/>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittextborder"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:text="sringeri1admin"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/remberMeCheck"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner_login_button"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />

                <CheckBox
                    android:id="@+id/remberMeCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/save_pwd"
                    android:textColor="@color/white"
                    android:theme="@style/MyCheckBox"/>
            </RelativeLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageLogo1"
            android:layout_width="@dimen/lock_icon"
            android:layout_height="@dimen/lock_icon"
            android:layout_above="@+id/loginForm"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/lock_icon_marginbottom"
            android:adjustViewBounds="true"
            android:src="@mipmap/lock_icon" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/loginlowerlogo"

            />
    </LinearLayout>
</LinearLayout>